Fix button icon vertical alignment

--- a/assets/less/general/button.less
+++ b/assets/less/general/button.less
@@ -38,6 +38,7 @@
 }
 
 .button-icon {
+  align-items: center;
   background-color: transparent;
   border: 0;
   color: var(--darker-gray-color);
